--- a/admin/view/default/adminuser/useradd.html
+++ b/admin/view/default/adminuser/useradd.html
@@ -2,54 +2,60 @@
 <head>
 <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
 <title>主机列表</title>
-<link rel='stylesheet' type='text/css' href='/css/style.css'>
+<link rel='stylesheet' type='text/css' href='{{$STATIC}}style/style.css'>
 <script language="javascript" src="scripts/jquery.js"></script>
 <script language="javascript" src="scripts/common.js"></script>
 </head>
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div>&nbsp;<br></div>
+<div class="topimg">当前位置：管理员管理 -> 增加管理员</div>
 <div id="container">
   <div id="main" class="wid" align="center">
   <form  action="?c=adminuser&a=insert" method='post'>
-    <table width="500" border="0" cellpadding="0" cellspacing="0">
+    <table align="center" border="0" cellpadding="0" cellspacing="10" width="70%">
+<tr>
+  <td>
+     <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
+       <tr>
+  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　增加管理员</span></font></td>
+	</tr>
+	</table>
+	</td>
+</tr>
   <tr>
-    <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
+    <td>
+<table bgcolor="#CEE1F3" border="0" cellspacing="1" width="100%">
+  <tr>
+    <td bgcolor="#ffffff" width="9%" height="30">
+<table width="100%" height="170" border="0" cellpadding="0" cellspacing="1" bgcolor="#e6f4f9">
       <tr>
-        <td width="12" height="49"><img src="{{$STATIC}}/images/left_2.jpg" width="12" height="49"></td>
-        <td background="{{$STATIC}}/images/bg3.jpg" align="left">
-		  <table width="122" border="0" cellpadding="0" cellspacing="0">
-            <tr>
-              <td width="122" height="10"></td>
-            </tr>
-            <tr>
-              <td><img src="{{$STATIC}}/images/bg13.png" width="121" height="29"></td>
-            </tr>
-            <tr>
-              <td></td>
-            </tr>
-          </table>		</td>
-        <td width="12" height="49"><img src="{{$STATIC}}/images/righ_2.jpg" width="12" height="49"></td>
+        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
+        </tr>
+      <tr>
+        <td bgcolor="#f5f5f5" width="107" class='color01 right'>　用户：</td>
+        <td width="209" bgcolor="#fafaf5">
+          <input type='text' name='username' id='username' value="" onBlur="checkUsername();"/></td>
+        <td width="123" bgcolor="#fafaf5">&nbsp;</td>
       </tr>
+      <tr>
+        <td bgcolor="#f5f5f5"  class='color01 right'>　密码：</td>
+        <td bgcolor="#fafaf5"><input type='password' name='passwd' id='passwd' value=""/></td>
+        <td bgcolor="#fafaf5">&nbsp;</td>
+      </tr>
+      <tr>
+        <td bgcolor="#f5f5f5" class='color01 right'>　确认密码：</td>
+        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/></td>
+        <td bgcolor="#fafaf5">&nbsp;</td>
+      </tr>
+      <tr>
+        <td bgcolor="#f5f5f5">　</td>
+        <td bgcolor="#fafaf5"><button type="submit">增加</button></td>
+        <td bgcolor="#fafaf5">&nbsp;</td>
+      </tr>
+	    <tr>
+        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
+        </tr>
     </table></td>
-  </tr>
-  <tr>
-    <td height="218" align="center" valign="top" background="{{$STATIC}}/images/bg_10.jpg"><table width="350" height="135" border="0" cellpadding="0" cellspacing="0">
-	<tr><td>&nbsp;</td></tr>
-      <tr>
-        <td class='color01 right'>用户名</td>
-        <td><input type='text' name='username' id='username' value="" onBlur="checkUsername();"/>&nbsp;&nbsp;<span id='check'></span></td>
-      </tr>
-      <tr>
-        <td class='color01 right'>密码</td>
-        <td><input type='password' name='passwd' id='passwd' value=""/>&nbsp;&nbsp;<span id='check'></span></td>
-      </tr>
-      <tr>
-        <td class='color01 right'>确认密码</td>
-        <td><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/>&nbsp;&nbsp;<span id='check'></span></td>
-      </tr>
-      <tr>
-        <td>&nbsp;</td>
-        <td><button type="submit">增加</button></td>
       </tr>
     </table></td>
   </tr>
