modify addnode file

--- a/admin/view/default/nodes/addnode.html
+++ b/admin/view/default/nodes/addnode.html
@@ -59,24 +59,16 @@
         <td bgcolor="#fafaf5">&nbsp;</td>
       </tr>
       <tr>
-<<<<<<< HEAD
-        <td bgcolor="#f5f5f5" class="color01 right">　数据库管理账号</td>
-        <td bgcolor="#fafaf5"><input name="passwd" type="text" id="passwd" value="{{$node.db_user}}">
-=======
-        <td><span class="color01 right">数据库管理账号</span></td>
-        <td><input name="db_user" type="text" id="db_user" value="{{$node.db_user}}">
->>>>>>> e482d78665cd9f574c377830b2e680859754ecdb
+
+        <td bgcolor="#f5f5f5" ><span class="color01 right">数据库管理账号</span></td>
+        <td bgcolor="#fafaf5"><input name="db_user" type="text" id="db_user" value="{{$node.db_user}}">
             <font color=red>*必填</font></td>
         <td bgcolor="#fafaf5">&nbsp;</td>
       </tr>
       <tr>
-<<<<<<< HEAD
-        <td bgcolor="#f5f5f5" class="color01 right">　数据库管理密码</td>
-        <td bgcolor="#fafaf5"><input name="passwd" type="text" id="passwd" value="{{$node.db_passwd}}">
-=======
-        <td><span class="color01 right">数据库管理密码</span></td>
-        <td><input name="db_passwd" type="text" id="db_passwd" value="{{$node.db_passwd}}">
->>>>>>> e482d78665cd9f574c377830b2e680859754ecdb
+
+        <td bgcolor="#f5f5f5"><span class="color01 right">数据库管理密码</span></td>
+        <td bgcolor="#fafaf5"><input name="db_passwd" type="text" id="db_passwd" value="{{$node.db_passwd}}">
             <font color=red>*必填</font></td>
         <td bgcolor="#fafaf5">&nbsp;</td>
       </tr>
