--- a/admin/view/default/user/useredit.html
+++ b/admin/view/default/user/useredit.html
@@ -1,41 +1,70 @@
-!{include file='common/head.html'}
+{{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
-<div class="topimg">当前位置：修改用户资料</div>
+<div class="topimg">当前位置：用户管理-> 用户列表-> 修改用户资料</div>
   <div id="main" class="wid">
-  <form  action="?c=user&a=edit&username=!{$user.username}" method='post'>
-    <table cellpadding=0 cellspacing=1>
+  <form  action="?c=user&a=edit&username={{$user.username}}" method='post'>
+    <table align="center" border="0" cellpadding="0" cellspacing="10" width="80%">
+<tr>
+  <td>
+     <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
+       <tr>
+  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　<span class="topimg">修改用户资料</span></span></font></td>
+	</tr>
+	</table>
+	</td>
+</tr>
+  <tr>
+    <td>
+<table bgcolor="#CEE1F3" border="0" cellspacing="1" width="100%">
+  <tr>
+    <td bgcolor="#ffffff" width="9%" height="30">
+<table width="100%" height="210" border="0" cellpadding="0" cellspacing="1" bgcolor="#e6f4f9">
+	    <tr>
+        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
+        </tr>
       <tr>
-        <td width="74" bgcolor='#efefef' class='color01 right'>用户名</td>
-        <td width="168">!{$user.username}</td>
+        <td bgcolor="#f5f5f5" width="203" class="color01 right">　用户名：</td>
+        <td width="412" bgcolor="#fafaf5">{{$user.username}}</td>
+        <td width="219" bgcolor="#fafaf5">&nbsp;</td>
       </tr>
       <tr>
-        <td class='color01 right' bgcolor='#efefef'>密码</td>
-        <td><input type='password' name='passwd' id='passwd' value=""/></td>
+        <td bgcolor="#f5f5f5"  class="color01 right">　密码：</td>
+        <td bgcolor="#fafaf5"><input type='password' name='passwd' id='passwd' value=""/></td>
+        <td bgcolor="#fafaf5">&nbsp;</td>
       </tr>
       <tr>
-        <td class='color01 right' bgcolor='#efefef'>姓名</td>
-        <td><input name='name' value="!{$user.name}"/>          </td>
+        <td bgcolor="#f5f5f5" class="color01 right">　姓名：</td>
+        <td bgcolor="#fafaf5"><input name='name' value="{{$user.name}}"/></td>
+        <td bgcolor="#fafaf5">&nbsp;</td>
       </tr>
       <tr>
-        <td class='color01 right' bgcolor='#efefef'>身份证</td>
-        <td><input name='id'  value="!{$user.id}"/>
-          &nbsp;&nbsp;<span id='check'></span></td>
+        <td bgcolor="#f5f5f5" class="color01 right">　身份证:</td>
+        <td bgcolor="#fafaf5"><input name='id'  value="{{$user.id}}"/></td>
+        <td bgcolor="#fafaf5">&nbsp;</td>
       </tr>
       <tr>
-        <td class='color01 right' bgcolor='#efefef'>电子邮件</td>
-        <td><input name='email' value="!{$user.email}"/></td>
+        <td bgcolor="#f5f5f5" class="color01 right">　电子邮件:</td>
+        <td bgcolor="#fafaf5"><input name='email' value="{{$user.email}}"/></td>
+        <td bgcolor="#fafaf5">&nbsp;</td>
       </tr>
 	   <tr>
-        <td colspan="2" bgcolor='#efefef' class='color01 center' align="center"><button type="submit">
-          修改
-          </button></td>
+        <td bgcolor="#f5f5f5" class="color01 right">　</td>
+        <td bgcolor="#fafaf5"><button type="submit">修改</button></td>
+        <td bgcolor="#fafaf5">&nbsp;</td>
+      </tr>
+	    <tr>
+        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
         </tr>
-    </table>
+    </table></td>
+      </tr>
+    </table></td>
+  </tr>
+</table>
 	<div><!--E 协议-->
 	</div>
 	</form>
   </div>
 </div>
 </body>
-!{include file='common/foot.html'}
+{{include file='common/foot.html'}}
