--- a/user/view/default/user/changeForm.html
+++ b/user/view/default/user/changeForm.html
@@ -1,35 +1,56 @@
 <form action="?c=user&a=change" method="post">
-<br /><div class="topimg">当前位置：修改资料</div>
-<table width="70%" border=0 align="center" cellPadding=3 cellSpacing=0>
+<br />
+<div class="topimg">当前位置：帐号管理 -> 修改资料</div>
+<table align="center" border="0" cellpadding="0" cellspacing="10" width="70%">
 <tr>
-  <td width="15" height="40"></td>
+  <td>
+     <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
+       <tr>
+  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　修改资料</span></font></td>
+	</tr>
+	</table>
+	</td>
 </tr>
   <tr>
-    <td height="25" background="{{$STATIC}}/images/th_bg.gif"><FONT color=#ffffff><STRONG>&nbsp;修改资料</STRONG></FONT></td>
-  </tr>
-<tr>
-  <td><table width="100%" height="150" border="0" cellpadding="0" cellspacing="1" id="table">
+    <td>
+<table bgcolor="#CEE1F3" border="0" cellspacing="1" width="100%">
   <tr>
-    <td width="99">&nbsp;用户名</td>
-    <td width="214">&nbsp;{{$user.username}}</td>
+    <td bgcolor="#ffffff" width="9%" height="30">
+<table width="100%" height="210" border="0" cellpadding="0" cellspacing="1" bgcolor="#e6f4f9">
+	    <tr>
+        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
+        </tr>
+      <tr>
+        <td bgcolor="#f5f5f5" width="203" class="color01 right">　用户名：</td>
+        <td width="412" bgcolor="#fafaf5">{{$user.username}}</td>
+        <td width="219" bgcolor="#fafaf5">&nbsp;</td>
+      </tr>
+      <tr>
+        <td bgcolor="#f5f5f5"  class="color01 right">　姓名：</td>
+        <td bgcolor="#fafaf5"><input name='name' id="name" value='{{$user.name}}' /></td>
+        <td bgcolor="#fafaf5">&nbsp;</td>
+      </tr>
+      <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　身份证：</td>
+        <td bgcolor="#fafaf5"><input name='id' id="id" value='{{$user.id}}' /></td>
+        <td bgcolor="#fafaf5">&nbsp;</td>
+      </tr>
+      <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　电子邮件</td>
+        <td bgcolor="#fafaf5"><input name='email' id="email" value='{{$user.email}}' /></td>
+        <td bgcolor="#fafaf5">&nbsp;</td>
+      </tr>
+      <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　</td>
+        <td bgcolor="#fafaf5"><input type='submit' value='修改' /></td>
+        <td bgcolor="#fafaf5">&nbsp;</td>
+      </tr>
+	    <tr>
+        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
+        </tr>
+    </table></td>
+      </tr>
+    </table></td>
   </tr>
-  <tr>
-    <td>&nbsp;姓名</td>
-    <td>&nbsp;<input name='name' id="name" value='{{$user.name}}' /></td>
-  </tr>
-  <tr>
-    <td>&nbsp;身份证</td>
-    <td>&nbsp;<input name='id' id="id" value='{{$user.id}}' /></td>
-  </tr>
-  <tr>
-    <td>&nbsp;电子邮件</td>
-    <td>&nbsp;<input name='email' id="email" value='{{$user.email}}' /></td>
-  </tr>
-    <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;<input type='submit' value='修改' /></td>
-  </tr>
- </table></td>
-</tr>
- </table>
+</table>
  </form>
