--- a/vhost/view/default/domain/add.html
+++ b/vhost/view/default/domain/add.html
@@ -4,38 +4,40 @@
 <div class="topimg">{{if $action=='add'}}增加域名绑定{{else}}修改域名绑定{{/if}}</div>
   <div id="main" class="wid">
   <form name='nodeform' action="?c=domain&a={{$action}}" method="post">
-    <table width="500" border="0" align="center" cellpadding="0" cellspacing="0" >
+    <table align="center" border="0" cellpadding="0" cellspacing="10" width="70%">
+<tr>
+  <td>
+     <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
+       <tr>
+  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　增加域名绑定</span></font></td>
+	</tr>
+	</table>
+	</td>
+</tr>
   <tr>
-    <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
+    <td>
+<table bgcolor="#CEE1F3" border="0" cellspacing="1" width="100%">
+  <tr>
+    <td bgcolor="#ffffff" width="9%" height="30">
+<table width="100%" height="120" border="0" cellpadding="0" cellspacing="1" bgcolor="#e6f4f9">
       <tr>
-        <td width="12" height="49"><img src="{{$STATIC}}/images/left_2.jpg" width="12" height="49"></td>
-        <td background="{{$STATIC}}/images/bg3.jpg" align="left">
-		  <table width="122" border="0" cellpadding="0" cellspacing="0">
-            <tr>
-              <td width="122" height="10"></td>
-            </tr>
-            <tr>
-              <td><img src="{{$STATIC}}/images/bg20.png" width="121" height="29"></td>
-            </tr>
-            <tr>
-              <td></td>
-            </tr>
-          </table>		</td>
-        <td width="12" height="49"><img src="{{$STATIC}}/images/righ_2.jpg" width="12" height="49"></td>
+        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
+        </tr>
+      <tr>
+        <td bgcolor="#f5f5f5" width="189" class="color01 right">　域名绑定：</td>
+        <td width="423" bgcolor="#fafaf5">
+          <input type='text' name='domain' id='domain' value="{{$domain.domain}}" onBlur="checkName();"></td>
+        <td width="236" bgcolor="#fafaf5">&nbsp;</td>
       </tr>
+      <tr>
+        <td bgcolor="#f5f5f5">　</td>
+        <td bgcolor="#fafaf5"><button type="submit">确定</button></td>
+        <td bgcolor="#fafaf5">&nbsp;</td>
+      </tr>
+	    <tr>
+        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
+        </tr>
     </table></td>
-  </tr>
-  <tr>
-    <td height="135" align="center" valign="top" background="{{$STATIC}}/images/bg_10.jpg">
-	<table width="350" height="100" border="0" cellpadding="0" cellspacing="0" >
-	<tr><td>&nbsp;</td></tr>
-      <tr>
-        <td align="center" class='color01 right'>域名绑定</td>
-        <td><input type='text' name='domain' id='domain' value="{{$domain.domain}}" onBlur="checkName();"></td>
-      </tr>
-      <tr>
-        <td>&nbsp;</td>
-        <td> <button type="submit">确定</button></td>
       </tr>
     </table></td>
   </tr>
