--- a/admin/view/default/adminuser/useradd.html
+++ b/admin/view/default/adminuser/useradd.html
@@ -8,7 +8,6 @@
 </head>
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div>&nbsp;<br></div>
-<div class="topimg">当前位置：管理员管理 -> 增加管理员</div>
 <div id="container">
   <div id="main" class="wid" align="center">
   <form  action="?c=adminuser&a=insert" method='post'>
@@ -17,7 +16,7 @@
   <td>
      <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
        <tr>
-  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　增加管理员</span></font></td>
+  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　增加管理员</font></td>
 	</tr>
 	</table>
 	</td>
