--- a/vhost/view/default/domain/add.html
+++ b/vhost/view/default/domain/add.html
@@ -1,6 +1,4 @@
-﻿{{include file='common/head.html'}}
-<body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
-<div id="container">
+﻿<div id="container">
 <div class="topimg">{{if $action=='add'}}增加域名绑定{{else}}修改域名绑定{{/if}}</div>
   <div id="main" class="wid">
   <form name='nodeform' action="?c=domain&a={{$action}}" method="post">
@@ -46,5 +44,3 @@
 
   </div>
 </div>
-</body>
-{{include file='common/foot.html'}}
