--- a/vhost/view/default/kfinfo.html
+++ b/vhost/view/default/kfinfo.html
@@ -1,6 +1,4 @@
-{{include file='common/head.html'}}
-<body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0' >
-<br /><div class="topimg STYLE1">当前位置：帐户信息</div>
+<div class="topimg STYLE1">当前位置：帐户信息</div>
 <div id="main" class="wid">
 <table width="70%" border=0 align="center" cellPadding=3 cellSpacing=0 >
 <tr>
@@ -40,5 +38,3 @@
 </table>
 </div>
 
-</body>
-</html>
