--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -1,5 +1,48 @@
 {{include file='common/head.html'}}
 <body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
+<script language='javascript' src='{{$PSTATIC}}/style/common.js'></script>
+<script language='javascript'>
+function list_templete_result() { 
+	var recv_msg=false;
+	try{
+	 if (xmlhttp.readyState==4) {
+		if(xmlhttp.status==200){		
+			var dataArray = xmlhttp.responseXML.getElementsByTagName('templete');
+	      var dataArrayLen = dataArray.length;
+	      var templeteMatched = false;
+		  var i=0;
+		  var insertData = "<select name='templete'>";
+		  for(i=0;i<dataArrayLen;i++){			 
+			  var templete = dataArray[i].firstChild.data;
+			  insertData += "<option value='" + templete + "' ";
+			  if(templete == '{{$vhostproduct.templete}}'){
+				  insertData += 'selected';
+				  templeteMatched = true;
+			  }
+			  insertData += ">" + templete + "</option>\n";
+		  }
+		  insertData += "</select>";
+		  xxkf_obj('templete').innerHTML = insertData;
+		  {{if $vhostproduct.templete!=''}}
+		  if(!templeteMatched){
+			 alert('Warning: The node have not templete : {{$vhostproduct.templete}}'); 
+		  }
+		  {{/if}}
+		}
+	  }
+	}catch(e){
+		alert(e);
+	}
+}
+function changeNode()
+{
+	//alert('haha');
+	xxkf_obj('templete').innerHTML="<img src='{{$PSTATIC}}/style/busy.gif'/>";
+	var url = '?c={{$smarty.request.c}}&a=ajaxListTemplete&node='+nodeform.node.value;
+	//alert(url);
+	ajax_open_url(url,list_templete_result);
+}
+</script>
 <div id="container">
 <div class="topimg">{{if $action=='addProduct'}}增加虚拟主机产品{{else}}修改虚拟主机产品{{/if}}</div>
   <div id="main" class="wid" align="center">
@@ -9,7 +52,7 @@
   <td>
      <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
        <tr>
-  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　增加虚拟主机产品</span></font></td>
+  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">{{if $action=='addProduct'}}增加虚拟主机产品{{else}}修改虚拟主机产品{{/if}}</font></td>
 	</tr>
 	</table>
 	</td>
@@ -24,33 +67,37 @@
         <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5" width="203" class="color01 right">　产品名称：</td>
-        <td width="412" bgcolor="#fafaf5"><input name='name' type='text' id='name' onBlur="checkName();" value="{{$vhostproduct.name}}" size="16"></td>
+        <td bgcolor="#f5f5f5" width="203" class="color01 right">产品名称：</td>
+        <td width="412" bgcolor="#fafaf5"><input name='name' type='text' id='name' value="{{$vhostproduct.name}}" size="16"></td>
         <td width="219" bgcolor="#fafaf5">&nbsp;</td>
       </tr>
       <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">　空间大小(M)：</td>
+        <td bgcolor="#f5f5f5"  class="color01 right">空间大小(M)：</td>
         <td bgcolor="#fafaf5"><input name="web_quota" type="text" value="{{$vhostproduct.web_quota}}" size="16"></td>
         <td bgcolor="#fafaf5">&nbsp;</td>
       </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　数据库大小(M)：</td>
+        <td bgcolor="#f5f5f5" class="color01 right">数据库大小(M)：</td>
         <td bgcolor="#fafaf5"><input name="db_quota" type="text" id="db_quota" value="{{$vhostproduct.db_quota}}"></td>
         <td bgcolor="#fafaf5">&nbsp;</td>
       </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　价格(分/年)</td>
+        <td bgcolor="#f5f5f5" class="color01 right">价格(分/年)</td>
         <td bgcolor="#fafaf5"><input name="price" type="text" id="price" value="{{$vhostproduct.price}}"></td>
         <td bgcolor="#fafaf5">&nbsp;</td>
       </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　模板</td>
-        <td bgcolor="#fafaf5"><input name="templete" type="text" value="{{$vhostproduct.templete}}"></td>
+        <td bgcolor="#f5f5f5" class="color01 right">模板</td>
+        <td bgcolor="#fafaf5">
+        <div id='templete'>
+        <input name="templete" type="text" value="{{$vhostproduct.templete}}">
+        </div>
+        </td>
         <td bgcolor="#fafaf5">&nbsp;</td>
       </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　主机</td>
-        <td bgcolor="#fafaf5"><select name='node'>
+        <td bgcolor="#f5f5f5" class="color01 right">主机</td>
+        <td bgcolor="#fafaf5"><select name='node' onChange='changeNode()'>
 			 {{foreach from=$nodes item=node}}
 			 <option value='{{$node.name}}' {{if $node.name==$vhostproduct.node}} selected {{/if}}>{{$node.name}}</option>
 			 {{/foreach}}
@@ -58,13 +105,13 @@
         <td bgcolor="#fafaf5">&nbsp;</td>
       </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　状态</td>
+        <td bgcolor="#f5f5f5" class="color01 right">状态</td>
         <td bgcolor="#fafaf5"><input type="radio" name="state" value="0" {{if $vhostproduct.state==0}} checked {{/if}}>
 		  	     暂停销售
 		  	<input type="radio" name="state" value="1" {{if $vhostproduct.state==1}} checked {{/if}}>
 		  	       购买
 		  	<input type="radio" name="state" value="2" {{if $vhostproduct.state==2}} checked {{/if}}>
-试用</td>
+		试用</td>
         <td bgcolor="#fafaf5">&nbsp;</td>
       </tr>
       <tr>
@@ -81,8 +128,10 @@
   </tr>
 </table>
   </form>
-
   </div>
 </div>
+<script language='javascript'>
+changeNode();
+</script>
 </body>
 {{include file='common/foot.html'}}
