--- a/vhost/view/default/domain/show.html
+++ b/vhost/view/default/domain/show.html
@@ -2,9 +2,11 @@
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
 <div class="topimg">当前位置：绑定域名列表</div>
-<div class="topimg"></div>
 <div class="topimg pal1">共计 {{$sum}} 条记录</div>
   <div id="main" class="wid">
+  <table width='436' >
+  <tr><td>[<a href='?c=domain&a=addForm'>新增域名绑定</a>]</td></tr>
+  </table>
     <table width="436" cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
         <td width="75" bgcolor='#efefef' class='color01 right'>操作</td>
