--- a/vhost/view/default/top.html
+++ b/vhost/view/default/top.html
@@ -1,53 +1,5 @@
-{{include file="common/head.html"}}
-<head>
-<title>{{$title}}</title>
-<!-- 定义语言编码 -->
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<!-- 定义链接样式表 -->
-<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/public.css" type="text/css"/>
-<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/style.css" type="text/css"/>
-</head>
-<body>
-<table width="100%" align="center" cellpadding="0" cellspacing="0" background="{{$STATIC}}/images/bg5.gif">
-      <tr>
-        <td id="t1"><img src="{{$STATIC}}/images/bg6.png"></td>
-        <td id="t2">
-<SCRIPT language="javascript">
-<!--
-function initArray()
- {
-  for(i=0;i<initArray.arguments.length;i++)
-  this[i]=initArray.arguments[i];
- }
- var isnMonths=new initArray("1.","2.","3.","4.","5.","6.","7.","8.","9.","10.","11.","12.");
- var isnDays=new initArray("星期日","星期一","星期二","星期三","星期四","星期五","星期六","星期日");
- today=new Date();
- hrs=today.getHours();
- min=today.getMinutes();
- sec=today.getSeconds();
- clckh=""+((hrs>12)?hrs-12:hrs);
- clckm=((min<10)?"0":"")+min;clcks=((sec<10)?"0":"")+sec;
- clck=(hrs>=12)?"下午":"上午";
- var stnr="";
- var ns="0123456789";
- var a="";
-
-function getFullYear(d)
-{
-  yr=d.getYear();if(yr<1000)
-  yr+=1900;return yr;}
-  document.write("<table>");
-    document.write("<TR><TD>"+getFullYear(today)+"."+isnMonths[today.getMonth()]+""+today.getDate()+" "+isnDays[today.getDay()]+"</tr></td>");
-  document.write("</table>");
-//-->
-</SCRIPT>
-
-</td>
-<td align="right"><script language="javascript" src="?c=product&a=productList&target=parent.main">
-</script>
-</td>
-  </tr>
-</table>
-
-</body>
-</html>
+<div id='product_menu' align='center'> 
+[<a href='?c=index&a=main'>产品信息</a>] 
+[<a href='?c=session&a=changePasswordForm'>修改密码</a>] 
+[<a href='?c=domain&a=show'>域名绑定</a>] 
+</div>
