modify some file

--- a/admin/view/default/adminuser/userlist.html
+++ b/admin/view/default/adminuser/userlist.html
@@ -13,7 +13,7 @@
       <tr>
         <td class="right">{{$row.username}}</td>
         <td>
-		[<a href="javascript:if(confirm('确定删除{{$row.username}}?')){location='?c=adminuser&a=del&username={{$row.username}}';}" title="删除用户"><img src='/admin/view/default/images/delete.gif' alt='删除用户' border="0" align="absmiddle">删除用户</a>]
+		[<a href="javascript:if(confirm('确定删除{{$row.username}}?')){location='?c=adminuser&a=del&username={{$row.username}}';}" title="删除用户">删除用户</a>]
 		</td>
       </tr>
 	  {{/foreach}}
