--- a/admin/view/default/nodes/listnode.html
+++ b/admin/view/default/nodes/listnode.html
@@ -3,7 +3,7 @@
 <div id="container">
 {{$msg}}
 <div class="topimg pal1">共计 {{$sum}} 条记录</div>
-<div align='left'>[<a href='?c=nodes&a=flush'>更新配置文件</a>]</div>
+<div align='left'>&nbsp;&nbsp;[<a href='?c=nodes&a=flush'>更新配置文件</a>]</div>
   <div id="main" class="wid">
     <table width="725" cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
