--- a/admin/view/default/adminuser/useradd.html
+++ b/admin/view/default/adminuser/useradd.html
@@ -11,51 +11,33 @@
 <div id="container">
   <div id="main" class="wid" align="center">
   <form  action="?c=adminuser&a=insert" method='post'>
-    <table align="center" border="0" cellpadding="0" cellspacing="10" width="70%">
-<tr>
-  <td>
-     <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
-       <tr>
-  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　增加管理员</font></td>
+    <table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+	<tr>
+  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　增加管理员</font></td>
 	</tr>
-	</table>
-	</td>
-</tr>
   <tr>
     <td>
-<table bgcolor="#CEE1F3" border="0" cellspacing="1" width="100%">
-  <tr>
-    <td bgcolor="#ffffff" width="9%" height="30">
-<table width="100%" height="170" border="0" cellpadding="0" cellspacing="1" bgcolor="#e6f4f9">
+<table width="100%" height="140" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
       <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
-        </tr>
-      <tr>
-        <td bgcolor="#f5f5f5" width="107" class='color01 right'>　用户：</td>
-        <td width="209" bgcolor="#fafaf5">
+        <td bgcolor="#f5f5f5" width="189" class="color01 right">　用户：</td>
+        <td width="423" bgcolor="#fafaf5">
           <input type='text' name='username' id='username' value="" onBlur="checkUsername();"/></td>
-        <td width="123" bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5"  class='color01 right'>　密码：</td>
-        <td bgcolor="#fafaf5"><input type='password' name='passwd' id='passwd' value=""/></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5" class='color01 right'>　确认密码：</td>
-        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5">　</td>
-        <td bgcolor="#fafaf5"><button type="submit">增加</button></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-	    <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
         </tr>
-    </table></td>
-      </tr>
+      <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　密码：</td>
+        <td bgcolor="#fafaf5"><input type='password' name='passwd' id='passwd' value=""/></td>
+        </tr>
+      <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　确认密码：</td>
+        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/></td>
+        </tr>
+	    <tr>
+	    <td height="20" bgcolor="#f5f5f5" colspan="2">
+		<table width="100%" border="0" cellpadding="0" cellspacing="0">
+		  <tr><td width="200" height="40"></td>
+		  <td><button type="submit">增加</button></td></tr></table></td>
+        </tr>
+
     </table></td>
   </tr>
 </table>
