--- a/admin/view/default/changePassword.html
+++ b/admin/view/default/changePassword.html
@@ -14,56 +14,37 @@ function checkPassword()
 	frm.submit();
 }
 </script>
-<div class="topimg">当前位置：帐号管理 -> 修改密码</div>
 <div id="container">
 <div class="topimg"></div>
   <div id="main" class="wid">
     <form name='frm' action="?c=session&a=changePassword" method="post">
-	<table align="center" border="0" cellpadding="0" cellspacing="10" width="70%">
-<tr>
-  <td>
-     <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
-       <tr>
-  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　修改密码</span></font></td>
+	<table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+	<tr>
+  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　修改密码</span></font></td>
 	</tr>
-	</table>
-	</td>
-</tr>
   <tr>
     <td>
-<table bgcolor="#CEE1F3" border="0" cellspacing="1" width="100%">
-  <tr>
-    <td bgcolor="#ffffff" width="9%" height="30">
-<table width="100%" height="170" border="0" cellpadding="0" cellspacing="1" bgcolor="#e6f4f9">
-      <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
-        </tr>
+<table width="100%" height="140" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
       <tr>
         <td bgcolor="#f5f5f5" width="189">　旧密码：</td>
         <td width="423" bgcolor="#fafaf5">
           <input type='password' name='oldpasswd' id='oldpasswd'></td>
-        <td width="236" bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
+        </tr>
       <tr>
         <td bgcolor="#f5f5f5">　新密码：</td>
         <td bgcolor="#fafaf5"><input type='password' name='passwd' id='passwd' ></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
+        </tr>
       <tr>
         <td bgcolor="#f5f5f5">　确认新密码：</td>
         <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2'></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5">　</td>
-        <td bgcolor="#fafaf5"><button type="submit">增加</button></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-	    <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
         </tr>
-    </table></td>
-      </tr>
+	    <tr>
+	    <td height="20" bgcolor="#f5f5f5" colspan="2">
+		<table width="100%" border="0" cellpadding="0" cellspacing="0">
+		  <tr><td width="200" height="40"></td>
+		  <td><button type="submit">增加</button></td></tr></table></td>
+        </tr>
+
     </table></td>
   </tr>
 </table>
