--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -1,11 +1,10 @@
 {{include file='common/head.html'}}
 <body style="overflow-x:hidden; overflow-y:auto;">
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/left.css" type="text/css" media="all" />
-
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/public.css" type="text/css" media="all" />
 <table cellpadding="0" cellspacing="0" class="lefttd">
 <tr><td>
 <script type="text/javascript">
-
 function SwitchMenu(obj,sty)
 {
 /*	if(document.getElementById)
