--- a/admin/view/default/main.html
+++ b/admin/view/default/main.html
@@ -1,17 +1,26 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<table width="512" height="193" border="1">
+<div>&nbsp;<br></div>
+<table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+	<tr>
+  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　我的信息</font></td>
+	</tr>
   <tr>
-    <td width="105">用户名:</td>
-    <td width="391">{{$role.admin}}</td>
-  </tr>
-  <tr>
-    <td>最后登录时间</td>
-    <td>{{$smarty.session.admin_last_login}}</td>
-  </tr>
-  <tr>
-    <td>最后登录IP</td>
-    <td>{{$smarty.session.admin_last_ip}}</td>
+    <td>
+<table width="100%" height="120" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+	  <tr>
+        <td width="200" bgcolor="#f5f5f5" class="color01 right">　用户名:</td>
+        <td bgcolor="#fafaf5">{{$role.admin}}</td>
+	  </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　最后登录时间:</td>
+        <td bgcolor="#fafaf5"> {{$smarty.session.admin_last_login}}</td>
+        </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　最后登录IP:</td>
+        <td bgcolor="#fafaf5">{{$smarty.session.admin_last_ip}}</td>
+	  </tr>
+	    </table></td>
   </tr>
 </table>
 {{include file='common/foot.html'}}
