--- a/admin/view/default/nodes/addnode.html
+++ b/admin/view/default/nodes/addnode.html
@@ -1,92 +1,68 @@
 {{include file='common/head.html'}}
 <body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
 <div id="container">
-<div class="topimg">当前位置：主机管理 -> 增加主机</div>
+<div>&nbsp;<br></div>
   <div id="main" class="wid" align="center">
   <form name='nodeform' action="?c=nodes&a={{$action}}&oldname={{$node.name}}" method="post">
-    <table align="center" border="0" cellpadding="0" cellspacing="10" width="80%">
-<tr>
-  <td>
-     <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
-       <tr>
-  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">增加主机</span></font></td>
+    <table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+	<tr>
+  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　增加主机</font></td>
 	</tr>
-	</table>
-	</td>
-</tr>
   <tr>
     <td>
-<table bgcolor="#CEE1F3" border="0" cellspacing="1" width="100%">
-  <tr>
-    <td bgcolor="#ffffff" width="9%" height="30">
-<table width="100%" height="300" border="0" cellpadding="0" cellspacing="1" bgcolor="#e6f4f9">
-	    <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
-        </tr>
+<table width="100%" height="270" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
       <tr>
-        <td bgcolor="#f5f5f5" width="203" class="color01 right">名字：</td>
-        <td width="412" bgcolor="#fafaf5">
-          <input type='text' name='name' id='name' value="{{$node.name}}" onBlur="checkName();"
+        <td bgcolor="#f5f5f5" width="189" class="color01 right">　名字：</td>
+        <td width="423" bgcolor="#fafaf5">
+           <input type='text' name='name' id='name' value="{{$node.name}}" onBlur="checkName();"
         {{if $action=="edit"}}
         	readonly
         {{/if}}
         />
           &nbsp;<font color=red>*必填</font></td>
-        <td width="219" bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
+        </tr>
       <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">主机：</td>
+        <td bgcolor="#f5f5f5" class="color01 right">　主机：</td>
         <td bgcolor="#fafaf5"><input name="host" type="text" id="host" value="{{$node.host}}">
 		      <font color=red>*必填</font></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
+        </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">管理端口：</td>
+        <td bgcolor="#f5f5f5" class="color01 right">　管理端口：</td>
         <td bgcolor="#fafaf5"><input name="port" value="{{$node.port}}" type="text">
 			   <font color=red>*必填</font></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">用户名</td>
+        </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　用户名</td>
         <td bgcolor="#fafaf5"><input name="user" type="text" id="user" value="{{$node.user}}">
 				   <font color=red>*必填</font></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">密码</td>
+        </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　密码</td>
         <td bgcolor="#fafaf5"><input name="passwd" type="text" id="passwd" value="{{$node.passwd}}">
             <font color=red>*必填</font></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-
-        <td bgcolor="#f5f5f5" ><span class="color01 right">数据库管理账号</span></td>
+        </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　数据库管理账号</td>
         <td bgcolor="#fafaf5"><input name="db_user" type="text" id="db_user" value="{{$node.db_user}}">
             <font color=red>*必填</font></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5"><span class="color01 right">数据库管理密码</span></td>
+        </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　数据库管理密码</td>
         <td bgcolor="#fafaf5"><input name="db_passwd" type="text" id="db_passwd" value="{{$node.db_passwd}}">
             <font color=red>*必填</font></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5"><span class="color01 right">物理盘</span></td>
+        </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　物理盘</td>
         <td bgcolor="#fafaf5"><input name="dev" type="text" id="dev" value="{{$node.dev}}">
             <font color=red>*必填(windows写c:,d:等，unix写/dev/sda1等)</font></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5">&nbsp;</td>
-        <td bgcolor="#fafaf5"><button type="submit">确认提交</button></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-	    <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
         </tr>
-    </table></td>
-      </tr>
+	    <tr>
+	    <td height="20" bgcolor="#f5f5f5" colspan="2">
+		<table width="100%" border="0" cellpadding="0" cellspacing="0">
+		  <tr><td width="200" height="40"></td>
+		  <td><button type="submit">确认提交</button></td></tr></table></td>
+        </tr>
+
     </table></td>
   </tr>
 </table>
