--- a/admin/view/default/vhostproduct/showVhost.html
+++ b/admin/view/default/vhostproduct/showVhost.html
@@ -9,49 +9,53 @@
 
   {{if $row}}
    <div id="main" class="wid"> 
-      <table width="224" border="1">
-    <tr>
-      <td>用户名</td>
-      <td>{{$row.name}}</td>
-    </tr>
-    <tr>
-      <td width="75">UID</td>
-      <td width="133">{{$row.uid}}</td>
-    </tr>
-
-    <tr>
-      <td>所属用户</td>
-      <td>{{$row.username}}</td>
-    </tr>
-    <tr>
-      <td>产品ID</td>
-      <td>{{$row.product_id}}</td>
-    </tr>
-    <tr>
-      <td>网页大小</td>
-      <td>{{$row.web_quota}}</td>
-    </tr>
-    <tr>
-      <td>数据库大小</td>
-      <td>{{$row.db_quota}}</td>
-    </tr>
-    <tr>
-      <td>所在服务器</td>
-      <td>{{$row.node}}</td>
-    </tr>
-    <tr>
-      <td>创建时间</td>
-      <td>{{$row.create_time}}</td>
-    </tr>
-    <tr>
-      <td>过期时间</td>
-      <td>{{$row.expire_time}}</td>
-    </tr>
+      <table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
 	<tr>
-      <td>状态</td>
-      <td>{{$row.state}}</td>
-    </tr>
-  </table>
+    <td>
+<table width="100%" height="240" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+      <tr>
+        <td bgcolor="#f5f5f5" width="189" class="color01 right">　用户名</td>
+        <td width="423" bgcolor="#fafaf5">{{$row.name}}</td>
+        </tr>
+      <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　UID：</td>
+        <td bgcolor="#fafaf5">{{$row.uid}}</td>
+      </tr>
+      <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　所属用户：</td>
+        <td bgcolor="#fafaf5">{{$row.username}}</td>
+      </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　产品ID</td>
+        <td bgcolor="#fafaf5">{{$row.product_id}}</td>
+	  </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　网页大小</td>
+        <td bgcolor="#fafaf5"> {{$row.web_quota}}</td>
+        </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　数据库大小</td>
+        <td bgcolor="#fafaf5">{{$row.db_quota}}</td>
+	  </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5"  class="color01 right">　所在服务器</td>
+        <td bgcolor="#fafaf5">{{$row.node}}</td>
+        </tr>
+	    	  <tr>
+        <td bgcolor="#f5f5f5"  class="color01 right">　创建时间</td>
+        <td bgcolor="#fafaf5">{{$row.create_time}}</td>
+        </tr>
+			  <tr>
+        <td bgcolor="#f5f5f5"  class="color01 right">　过期时间</td>
+        <td bgcolor="#fafaf5">{{$row.expire_time}}</td>
+        </tr>
+			  <tr>
+        <td bgcolor="#f5f5f5"  class="color01 right">　状态</td>
+        <td bgcolor="#fafaf5">{{$row.state}}</td>
+        </tr>
+    </table></td>
+  </tr>
+</table>
     {{if $list}}
   <table >
   <tr id="ttitle"><td class='color01 right' bgcolor='#efefef'>域名</td><td class='color01 right' bgcolor='#efefef'>目录</td></tr>
