--- a/user/view/default/public/register.html
+++ b/user/view/default/public/register.html
@@ -32,86 +32,58 @@ function check_register()
 	reg.submit();
 }
 </script>
+<div>&nbsp;<br></div>
 <div id="container">
-<div class="topimg">当前位置：用户管理 -> 增加用户</div>
 <div class="topimg"></div>
   <div id="main" class="wid">
   <form  name='reg' action="?c=public&a=register" method='post'>
-    <table align="center" border="0" cellpadding="0" cellspacing="10" width="80%">
-<tr>
-  <td>
-     <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
-       <tr>
-  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　增加用户</font></td>
+<table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+	<tr>
+  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　增加用户</font></td>
 	</tr>
-	</table>
-	</td>
-</tr>
   <tr>
     <td>
-<table bgcolor="#CEE1F3" border="0" cellspacing="1" width="100%">
-  <tr>
-    <td bgcolor="#ffffff" width="9%" height="30">
-<table width="100%" height="300" border="0" cellpadding="0" cellspacing="1" bgcolor="#e6f4f9">
+<table width="100%" height="240" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
       <tr>
-        <td bgcolor="#f5f5f5" colspan="3">&nbsp;</td>
+        <td bgcolor="#f5f5f5" width="189" class="color01 right">　用户：</td>
+        <td width="423" bgcolor="#fafaf5">
+          <input type='text' name='username' id='username' value="" onBlur="checkUsername();"/></td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5" width="172">　<span class="color01 right">用户名</span>：</td>
-        <td width="473" bgcolor="#fafaf5">
-          <input name='username' type='text' id='username' onBlur="checkUsername();" value="" size="16"/><span class="STYLE1"><span class="color01 right">*</span>
-		  </span>
-           <input type="button" name="Submit" value="检测用户名" onClick="check_user()"></td>
-        <td width="298" bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　密码：</td>
+        <td bgcolor="#fafaf5"><input type='password' name='passwd' id='passwd' value=""/></td>
+        </tr>
       <tr>
-        <td bgcolor="#f5f5f5"><span class="color01 right">　密码：</span></td>
-        <td bgcolor="#fafaf5"><input name='passwd' type='password' id='passwd' value="" size="16"/><span class="STYLE1"><span class="color01 right">*</span></span></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5">　<span class="color01 right">确认密码：</span></td>
-        <td bgcolor="#fafaf5"><input name='passwd2' type='password' id='passwd2'  value="" size="16"/><span class="STYLE1"><span class="color01 right">*</span></span>
-		</td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5"><span class="color01 right">　电子邮件</span></td>
-        <td bgcolor="#fafaf5"><input name='email' type='text' id='email' value="" size="16"/><span class="STYLE1"><span class="color01 right">*</span></span></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5"><span class="color01 right">　真实姓名</span></td>
-        <td bgcolor="#fafaf5"><input name='name' type='text' id='name'  value="" size="16"/></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5"><span class="color01 right">　身份证</span></td>
-        <td bgcolor="#fafaf5"><input type='text' name='id' id='id' value="" /></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5">&nbsp;</td>
+        <td bgcolor="#f5f5f5" class="color01 right">　确认密码：</td>
+        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/></td>
+        </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　电子邮件:</td>
+        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/></td>
+        </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　真实姓名:</td>
+        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/></td>
+        </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　身份证:</td>
+        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/></td>
+        </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5">　</td>
         <td bgcolor="#fafaf5"><input name="agree" type="checkbox" id="agree" value="1">
 	      我已阅读并同意<a href="?c=">注册协议</a></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5">&nbsp;</td>
-        <td bgcolor="#fafaf5"><button type="button" onClick="check_register()">注册</button></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-	    <tr>
-        <td bgcolor="#f5f5f5" colspan="3">&nbsp;</td>
         </tr>
-    </table></td>
-      </tr>
+	    <tr>
+	    <td height="20" bgcolor="#f5f5f5" colspan="2">
+		<table width="100%" border="0" cellpadding="0" cellspacing="0">
+		  <tr><td width="200" height="40"></td>
+		  <td><button type="button" onClick="check_register()">注册</button></td></tr></table></td>
+        </tr>
+
     </table></td>
   </tr>
 </table>
-	<div>
-	<!--S 协议--><!--E 协议-->
-	</div>
 	</form>
   </div>
 </div>
