--- a/user/view/default/user/changeForm.html
+++ b/user/view/default/user/changeForm.html
@@ -1,55 +1,37 @@
 <form action="?c=user&a=change" method="post">
-<br />
+<div>&nbsp;<br></div>
 <div class="topimg">当前位置：帐号管理 -> 修改资料</div>
-<table align="center" border="0" cellpadding="0" cellspacing="10" width="70%">
-<tr>
-  <td>
-     <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
-       <tr>
-  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　修改资料</span></font></td>
+<div>&nbsp;<br></div>
+<table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+	<tr>
+  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　修改资料</span></font></td>
 	</tr>
-	</table>
-	</td>
-</tr>
   <tr>
     <td>
-<table bgcolor="#CEE1F3" border="0" cellspacing="1" width="100%">
-  <tr>
-    <td bgcolor="#ffffff" width="9%" height="30">
-<table width="100%" height="210" border="0" cellpadding="0" cellspacing="1" bgcolor="#e6f4f9">
-	    <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
+<table width="100%" height="150" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+	  <tr>
+        <td height="25" bgcolor="#f5f5f5" class="color01 right">　用户名：</td>
+        <td bgcolor="#fafaf5">{{$user.username}}</td>
+	  </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5" class="color01 right">　姓名：</td>
+        <td bgcolor="#fafaf5"> <input name='name' id="name" value='{{$user.name}}' /></td>
         </tr>
-      <tr>
-        <td bgcolor="#f5f5f5" width="203" class="color01 right">　用户名：</td>
-        <td width="412" bgcolor="#fafaf5">{{$user.username}}</td>
-        <td width="219" bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">　姓名：</td>
-        <td bgcolor="#fafaf5"><input name='name' id="name" value='{{$user.name}}' /></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
+	  <tr>
         <td bgcolor="#f5f5f5" class="color01 right">　身份证：</td>
         <td bgcolor="#fafaf5"><input name='id' id="id" value='{{$user.id}}' /></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　电子邮件</td>
+	  </tr>
+	  <tr>
+        <td bgcolor="#f5f5f5"  class="color01 right">　电子邮件</td>
         <td bgcolor="#fafaf5"><input name='email' id="email" value='{{$user.email}}' /></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　</td>
-        <td bgcolor="#fafaf5"><input type='submit' value='修改' /></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-	    <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
         </tr>
-    </table></td>
-      </tr>
+	    <tr>
+	    <td height="20" bgcolor="#f5f5f5" colspan="2">
+		<table width="100%" border="0" cellpadding="0" cellspacing="0">
+		  <tr><td width="250" height="40"></td>
+		  <td><input type='submit' value='修改' /></td></tr></table></td>
+        </tr>
+
     </table></td>
   </tr>
 </table>
