数据库接口

--- a/user/view/default/vhostproduct/showVhostProduct.html
+++ b/user/view/default/vhostproduct/showVhostProduct.html
@@ -20,7 +20,7 @@
 		<td class="right">{{$row.node}}</td>
 		<td class="right">{{$row.create_time}}</td>
 		<td class="right">{{$row.expire_time}}</td>
-		<td class="right">&nbsp;</td>
+		<td class="right">{{$row.status}}</td>
       </tr>
 	  {{/foreach}}
     </table>
