modify some file

--- a/admin/view/default/top.html
+++ b/admin/view/default/top.html
@@ -17,7 +17,7 @@
     <td>
 	<table width="100%" cellpadding="0" cellspacing="0">
       <tr>
-        <td id="t1" width="100%">&nbsp;</td>
+        <td id="t1" width="100%" class="right2"><img src="{{$STATIC}}/images/logo.gif"></td>
         <td id="t2" align="right">
 <SCRIPT language="javascript">
 <!--
