--- a/admin/view/default/adminuser/useradd.html
+++ b/admin/view/default/adminuser/useradd.html
@@ -11,28 +11,28 @@
 <div id="container">
   <div id="main" class="wid" align="center">
   <form  action="?c=adminuser&a=insert" method='post'>
-    <table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+    <table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="70%">
 	<tr>
-  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　增加管理员</font></td>
+  <td height="30" id="td2" colspan="2"><font color="#FFFFFF">　增加管理员</font></td>
 	</tr>
   <tr>
     <td>
-<table width="100%" height="130" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+<table width="100%" height="130" border="0" cellpadding="0" cellspacing="1" id="td5">
       <tr>
-        <td bgcolor="#f5f5f5" width="189" class="color01 right">　用户：</td>
-        <td width="423" bgcolor="#fafaf5">
+        <td id="td3" width="189" class="color01 right">用户：</td>
+        <td width="423" id="td4">
           <input type='text' name='username' id='username' value="" onBlur="checkUsername();"/></td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　密码：</td>
-        <td bgcolor="#fafaf5"><input type='password' name='passwd' id='passwd' value=""/></td>
+        <td id="td3" class="color01 right">密码：</td>
+        <td id="td4"><input type='password' name='passwd' id='passwd' value=""/></td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　确认密码：</td>
-        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/></td>
+        <td id="td3" class="color01 right">确认密码：</td>
+        <td id="td4"><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/></td>
         </tr>
 	    <tr>
-	    <td height="20" bgcolor="#f5f5f5" colspan="2">
+	    <td height="20" id="td3" colspan="2">
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
 		  <tr><td width="200" height="40"></td>
 		  <td><button type="submit">增加</button></td></tr></table></td>
