--- a/admin/view/default/changePassword.html
+++ b/admin/view/default/changePassword.html
@@ -18,28 +18,28 @@ function checkPassword()
 <div class="topimg"></div>
   <div id="main" class="wid">
     <form name='frm' action="?c=session&a=changePassword" method="post">
-	<table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+	<table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="70%">
 	<tr>
-  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　修改密码</span></font></td>
+  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">修改密码</font></td>
 	</tr>
   <tr>
     <td>
-<table width="100%" height="130" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+<table width="100%" height="130" border="0" cellpadding="0" cellspacing="1" id="td5">
       <tr>
-        <td bgcolor="#f5f5f5" width="189">　旧密码：</td>
-        <td width="423" bgcolor="#fafaf5">
+        <td id="td3" width="189" class="color01 right">旧密码：</td>
+        <td width="423" id="td4">
           <input type='password' name='oldpasswd' id='oldpasswd'></td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5">　新密码：</td>
-        <td bgcolor="#fafaf5"><input type='password' name='passwd' id='passwd' ></td>
+        <td id="td3" class="color01 right">新密码：</td>
+        <td id="td4"><input type='password' name='passwd' id='passwd' ></td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5">　确认新密码：</td>
-        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2'></td>
+        <td id="td3" class="color01 right">确认新密码：</td>
+        <td id="td4"><input type='password' name='passwd2' id='passwd2'></td>
         </tr>
 	    <tr>
-	    <td height="20" bgcolor="#f5f5f5" colspan="2">
+	    <td height="20" id="td3" colspan="2">
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
 		  <tr><td width="200" height="40"></td>
 		  <td><button type="submit">增加</button></td></tr></table></td>
