--- a/admin/view/default/main.html
+++ b/admin/view/default/main.html
@@ -1,24 +1,24 @@
 {{include file='common/head.html'}}
-<body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
+<body text='#000000' leftmargin='0' topmargin='0'>
 <div>&nbsp;<br><br></div>
-<table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="60%">
+<table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="60%">
 	<tr>
-  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　我的信息</font></td>
+  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">我的信息</font></td>
 	</tr>
   <tr>
     <td>
-<table width="100%" height="90" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+<table width="100%" height="90" border="0" cellpadding="0" cellspacing="1" id="td5">
 	  <tr>
-        <td width="200" bgcolor="#f5f5f5" class="color01 right">　用户名:</td>
-        <td bgcolor="#fafaf5">{{$role.admin}}</td>
+        <td width="200" id="td3" class="color01 right">用户名:</td>
+        <td id="td4">{{$role.admin}}</td>
 	  </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　最后登录时间:</td>
-        <td bgcolor="#fafaf5"> {{$smarty.session.admin_last_login}}</td>
+        <td id="td3" class="color01 right">最后登录时间:</td>
+        <td id="td4"> {{$smarty.session.admin_last_login}}</td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　最后登录IP:</td>
-        <td bgcolor="#fafaf5">{{$smarty.session.admin_last_ip}}</td>
+        <td id="td3" class="color01 right">最后登录IP:</td>
+        <td id="td4">{{$smarty.session.admin_last_ip}}</td>
 	  </tr>
       </table></td>
   </tr>
