--- a/admin/view/default/nodes/addnode.html
+++ b/admin/view/default/nodes/addnode.html
@@ -4,16 +4,16 @@
 <div>&nbsp;<br></div>
   <div id="main" class="wid" align="center">
   <form name='nodeform' action="?c=nodes&a={{$action}}&oldname={{$node.name}}" method="post">
-    <table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+    <table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="70%">
 	<tr>
-  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　增加主机</font></td>
+  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">增加主机</font></td>
 	</tr>
   <tr>
     <td>
-<table width="100%" height="270" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+<table width="100%" height="270" border="0" cellpadding="0" cellspacing="1" id="td5">
       <tr>
-        <td bgcolor="#f5f5f5" width="189" class="color01 right">　名字：</td>
-        <td width="423" bgcolor="#fafaf5">
+        <td id="td3" width="189" class="color01 right">名字：</td>
+        <td width="423" id="td4">
            <input type='text' name='name' id='name' value="{{$node.name}}" onBlur="checkName();"
         {{if $action=="edit"}}
         	readonly
@@ -22,42 +22,42 @@
           &nbsp;<font color=red>*必填</font></td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　主机：</td>
-        <td bgcolor="#fafaf5"><input name="host" type="text" id="host" value="{{$node.host}}">
+        <td id="td3" class="color01 right">主机：</td>
+        <td id="td4"><input name="host" type="text" id="host" value="{{$node.host}}">
 		      <font color=red>*必填</font></td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　管理端口：</td>
-        <td bgcolor="#fafaf5"><input name="port" value="{{$node.port}}" type="text">
+        <td id="td3" class="color01 right">管理端口：</td>
+        <td id="td4"><input name="port" value="{{$node.port}}" type="text">
 			   <font color=red>*必填</font></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　用户名</td>
-        <td bgcolor="#fafaf5"><input name="user" type="text" id="user" value="{{$node.user}}">
+        <td id="td3" class="color01 right">用户名：</td>
+        <td id="td4"><input name="user" type="text" id="user" value="{{$node.user}}">
 				   <font color=red>*必填</font></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　密码</td>
-        <td bgcolor="#fafaf5"><input name="passwd" type="text" id="passwd" value="{{$node.passwd}}">
+        <td id="td3" class="color01 right">密码：</td>
+        <td id="td4"><input name="passwd" type="text" id="passwd" value="{{$node.passwd}}">
             <font color=red>*必填</font></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　数据库管理账号</td>
-        <td bgcolor="#fafaf5"><input name="db_user" type="text" id="db_user" value="{{$node.db_user}}">
+        <td id="td3" class="color01 right">数据库管理账号：</td>
+        <td id="td4"><input name="db_user" type="text" id="db_user" value="{{$node.db_user}}">
             <font color=red>*必填</font></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　数据库管理密码</td>
-        <td bgcolor="#fafaf5"><input name="db_passwd" type="text" id="db_passwd" value="{{$node.db_passwd}}">
+        <td id="td3" class="color01 right">数据库管理密码：</td>
+        <td id="td4"><input name="db_passwd" type="text" id="db_passwd" value="{{$node.db_passwd}}">
             <font color=red>*必填</font></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　物理盘</td>
-        <td bgcolor="#fafaf5"><input name="dev" type="text" id="dev" value="{{$node.dev}}">
+        <td id="td3" class="color01 right">物理盘：</td>
+        <td id="td4"><input name="dev" type="text" id="dev" value="{{$node.dev}}">
             <font color=red>*必填(windows写c:,d:等，unix写/dev/sda1等)</font></td>
         </tr>
 	    <tr>
-	    <td height="20" bgcolor="#f5f5f5" colspan="2">
+	    <td height="20" id="td3" colspan="2">
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
 		  <tr><td width="200" height="40"></td>
 		  <td><button type="submit">确认提交</button></td></tr></table></td>
