--- a/admin/view/default/style/style.css
+++ b/admin/view/default/style/style.css
@@ -110,6 +110,10 @@ padding-right:10px;
 text-align:left;
 padding-left:10px;
 }
+.right2 {
+text-align:left;
+padding-left:30px;
+}
 .input {
 font-size:12px;
 color: #003366;
@@ -311,8 +315,23 @@ padding-left:6px;
 float:left;
 padding:5px;
 }
-
+#td1 {
+background:#7FBBF4;
+}
+#td2 {
+background:#51A3EC;
+}
+#td3 {
+background:#f5f5f5;
+}
+#td4 {
+background:#fafaf5;
+}
+#td5 {
+background:#C7EAF6;
+}
 .color01 a {color: #fff;}
 .color01 a:visited {color: #fff;}
 .color01 a:hover {color: red;text-decoration: underline;
 }
+
