--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -47,52 +47,52 @@ function changeNode()
 <div>&nbsp;<br></div>
   <div id="main" class="wid" align="center">
   <form name='nodeform' action="?c=vhostproduct&a={{$action}}&id={{$vhostproduct.id}}" method="post">
-    <table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+    <table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="70%">
 	<tr>
-  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　增加产品</font></td>
+  <td height="30" id="td2" colspan="2"><font color="#FFFFFF">　增加产品</font></td>
 	</tr>
   <tr>
     <td>
-<table width="100%" height="240" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+<table width="100%" height="240" border="0" cellpadding="0" cellspacing="1" id="td5">
       <tr>
-        <td bgcolor="#f5f5f5" width="189" class="color01 right">　产品名称：</td>
-        <td width="423" bgcolor="#fafaf5"><input name='name' type='text' id='name' value="{{$vhostproduct.name}}" size="16">
+        <td id="td3" width="189" class="color01 right">产品名称：</td>
+        <td width="423" id="td4"><input name='name' type='text' id='name' value="{{$vhostproduct.name}}" size="16">
          </td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　空间大小(M)：</td>
-        <td bgcolor="#fafaf5"><input name="web_quota" type="text" value="{{$vhostproduct.web_quota}}" size="16"></td>
+        <td id="td3" class="color01 right">空间大小(M)：</td>
+        <td id="td4"><input name="web_quota" type="text" value="{{$vhostproduct.web_quota}}" size="16"></td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　数据库大小(M)：</td>
-        <td bgcolor="#fafaf5"><input name="db_quota" type="text" id="db_quota" value="{{$vhostproduct.db_quota}}"></td>
+        <td id="td3" class="color01 right">数据库大小(M)：</td>
+        <td id="td4"><input name="db_quota" type="text" id="db_quota" value="{{$vhostproduct.db_quota}}"></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　价格(分/年)</td>
-        <td bgcolor="#fafaf5"><input name="price" type="text" id="price" value="{{$vhostproduct.price}}"></td>
+        <td id="td3" class="color01 right">价格(分/年)</td>
+        <td id="td4"><input name="price" type="text" id="price" value="{{$vhostproduct.price}}"></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　模板</td>
-        <td bgcolor="#fafaf5"> <div id='templete'>
+        <td id="td3" class="color01 right">模板</td>
+        <td id="td4"> <div id='templete'>
         <input name="templete" type="text" value="{{$vhostproduct.templete}}">
         </div></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　主机</td>
-        <td bgcolor="#fafaf5"><select name='node' onChange='changeNode()'>
+        <td id="td3" class="color01 right">主机</td>
+        <td id="td4"><select name='node' onChange='changeNode()'>
 			 {{foreach from=$nodes item=node}}
 			 <option value='{{$node.name}}' {{if $node.name==$vhostproduct.node}} selected {{/if}}>{{$node.name}}</option>
 			 {{/foreach}}
 			 </select></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">状态</td>
-        <td bgcolor="#fafaf5"><input type="checkbox" name="pause_flag" value="1" {{if $vhostproduct.pause_flag!=0}} checked {{/if}}>
+        <td id="td3"  class="color01 right">状态</td>
+        <td id="td4"><input type="checkbox" name="pause_flag" value="1" {{if $vhostproduct.pause_flag!=0}} checked {{/if}}>
 		  	     暂停销售
 		  </td>
         </tr>
 	    <tr>
-	    <td height="20" bgcolor="#f5f5f5" colspan="2">
+	    <td height="20" id="td3" colspan="2">
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
 		  <tr><td width="200" height="40"></td>
 		  <td><button type="submit">确认提交</button></td></tr></table></td>
