--- a/admin/view/default/vhostproduct/showVhost.html
+++ b/admin/view/default/vhostproduct/showVhost.html
@@ -9,53 +9,63 @@
 
   {{if $row}}
    <div id="main" class="wid"> 
-  [<a href='?c={{$smarty.request.c}}&a=resync&user={{$row.name}}'>重建空间</a>] 
-  [<a href='?c={{$smarty.request.c}}&a=resync&user={{$row.name}}'>重设密码</a>] 
-  [<a href='?c={{$smarty.request.c}}&a=resync&user={{$row.name}}'>重设数据库密码</a>]
-<table width="80%" height="240" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+  <table width="80%" border="0" align="center" cellpadding="0" cellspacing="1" id="td1">
+	<tr>
+  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">用户空间信息</font></td>
+	</tr>
+  <tr>
+    <td>
+<table width="100%" height="300" border="0" cellpadding="0" cellspacing="1" id="td5">
+		 <tr>
+        <td id="td3" colspan="2" align="center">
+		[<a href='?c={{$smarty.request.c}}&a=resync&user={{$row.name}}'>重建空间</a>] 
+        [<a href='?c={{$smarty.request.c}}&a=resync&user={{$row.name}}'>重设密码</a>] 
+        [<a href='?c={{$smarty.request.c}}&a=resync&user={{$row.name}}'>重设数据库密码</a>]
+		</td>
+          </tr>
       <tr>
-        <td bgcolor="#f5f5f5" width="189" class="color01 right">用户名</td>
-        <td width="423" bgcolor="#fafaf5">{{$row.name}}</td>
+        <td id="td3" width="189" class="color01 right">用户名</td>
+        <td width="423" id="td4">{{$row.name}}</td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">UID：</td>
-        <td bgcolor="#fafaf5">{{$row.uid}}</td>
+        <td id="td3" class="color01 right">UID：</td>
+        <td id="td4">{{$row.uid}}</td>
       </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">所属用户：</td>
-        <td bgcolor="#fafaf5"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
+        <td id="td3" class="color01 right">所属用户：</td>
+        <td id="td4"><a href='?c=user&a=listUser&username={{$row.username}}'>{{$row.username}}</a></td>
       </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">产品ID</td>
-        <td bgcolor="#fafaf5">{{$row.product_id}}</td>
+        <td id="td3" class="color01 right">产品ID</td>
+        <td id="td4">{{$row.product_id}}</td>
 	  </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">网页大小</td>
-        <td bgcolor="#fafaf5"> {{$row.web_quota}}</td>
+        <td id="td3" class="color01 right">网页大小</td>
+        <td id="td4"> {{$row.web_quota}}</td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">数据库大小</td>
-        <td bgcolor="#fafaf5">{{$row.db_quota}}</td>
+        <td id="td3" class="color01 right">数据库大小</td>
+        <td id="td4">{{$row.db_quota}}</td>
 	  </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">所在服务器</td>
-        <td bgcolor="#fafaf5">{{$row.node}}</td>
+        <td id="td3"  class="color01 right">所在服务器</td>
+        <td id="td4">{{$row.node}}</td>
         </tr>
        <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">路径</td>
-        <td bgcolor="#fafaf5">{{$row.doc_root}}</td>
+        <td id="td3"  class="color01 right">路径</td>
+        <td id="td4">{{$row.doc_root}}</td>
         </tr>
 	   <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">创建时间</td>
-        <td bgcolor="#fafaf5">{{$row.create_time}}</td>
+        <td id="td3"  class="color01 right">创建时间</td>
+        <td id="td4">{{$row.create_time}}</td>
         </tr>
 			  <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">过期时间</td>
-        <td bgcolor="#fafaf5">{{$row.expire_time}}</td>
+        <td id="td3"  class="color01 right">过期时间</td>
+        <td id="td4">{{$row.expire_time}}</td>
         </tr>
 			  <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">状态</td>
-        <td bgcolor="#fafaf5">
+        <td id="td3"  class="color01 right">状态</td>
+        <td id="td4">
         <form action='?c={{$smarty.request.c}}&a=setStatus&user={{$row.name}}' method='post' name='status_form'>
         <select name='status' onChange="javascript:status_form.submit()">
         {{for $i=0; $i<10; $i++}}
@@ -67,7 +77,9 @@
  </form>
  </td>
         </tr>
-    </table>
+</table></td>
+  </tr>
+</table>
     {{if $list}}
   <table >
   <tr id="ttitle"><td class='color01 right' bgcolor='#efefef'>域名</td><td class='color01 right' bgcolor='#efefef'>目录</td></tr>
