--- a/user/view/default/frame/top.html
+++ b/user/view/default/frame/top.html
@@ -15,9 +15,9 @@
 <table width="100%" id="t" cellpadding="0" cellspacing="0">
   <tr>
     <td>
-	<table width="100%" cellpadding="0" cellspacing="0" background="{{$STATIC}}/images/bg5.gif">
+	<table width="100%" cellpadding="0" cellspacing="0">
       <tr>
-        <td id="t1" width="100%"><img src="{{$STATIC}}/images/logo.png"></td>
+        <td id="t1" width="100%" class="right2"><img src="{{$STATIC}}/images/logo.gif"></td>
         <td id="t2">
 <script language="javascript" src="?c=product&a=productList&target=parent.main">
 </script>
