--- a/user/view/default/public/register.html
+++ b/user/view/default/public/register.html
@@ -37,45 +37,46 @@ function check_register()
 <div class="topimg"></div>
   <div id="main" class="wid">
   <form  name='reg' action="?c=public&a=register" method='post'>
-<table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+<table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="70%">
 	<tr>
-  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　增加用户</font></td>
+  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">注册用户</font></td>
 	</tr>
   <tr>
     <td>
-<table width="100%" height="240" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+<table width="100%" height="240" border="0" cellpadding="0" cellspacing="1" id="td5">
       <tr>
-        <td bgcolor="#f5f5f5" width="189" class="color01 right">　用户：</td>
-        <td width="423" bgcolor="#fafaf5">
-          <input type='text' name='username' id='username' value="" onBlur="checkUsername();"/></td>
-        </tr>
-      <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　密码：</td>
-        <td bgcolor="#fafaf5"><input type='password' name='passwd' id='passwd' value=""/></td>
+        <td id="td3" width="189" class="color01 right">用户：</td>
+        <td width="423" id="td4">
+         <input name='username' type='text' id='username' onBlur="checkUsername();" value="" size="16"/><span class="color01 right">*</span>
+           <input type="button" name="Submit" value="检测用户名" onClick="check_user()"></td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　确认密码：</td>
-        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/></td>
+        <td id="td3" class="color01 right">密码：</td>
+        <td id="td4"><input name='passwd' type='password' id='passwd' value="" size="16"/><span class="color01 right">*</span></td>
+        </tr>
+      <tr>
+        <td id="td3" class="color01 right">确认密码：</td>
+        <td id="td4"><input name='passwd2' type='password' id='passwd2'  value="" size="16"/><span class="color01 right">*</span></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　电子邮件:</td>
-        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/></td>
+        <td id="td3" class="color01 right">电子邮件:</td>
+        <td id="td4"><input name='email' type='text' id='email' value="" size="16"/><span class="color01 right">*</span></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　真实姓名:</td>
-        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/></td>
+        <td id="td3" class="color01 right">真实姓名:</td>
+        <td id="td4"><input name='name' type='text' id='name'  value="" size="16"/></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　身份证:</td>
-        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/></td>
+        <td id="td3" class="color01 right">身份证:</td>
+        <td id="td4"><input type='text' name='id' id='id' value="" /></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5">　</td>
-        <td bgcolor="#fafaf5"><input name="agree" type="checkbox" id="agree" value="1">
+        <td id="td3">　</td>
+        <td id="td4"><input name="agree" type="checkbox" id="agree" value="1">
 	      我已阅读并同意<a href="?c=">注册协议</a></td>
         </tr>
 	    <tr>
-	    <td height="20" bgcolor="#f5f5f5" colspan="2">
+	    <td height="20" id="td3" colspan="2">
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
 		  <tr><td width="200" height="40"></td>
 		  <td><button type="button" onClick="check_register()">注册</button></td></tr></table></td>
