--- a/user/view/default/user/changeForm.html
+++ b/user/view/default/user/changeForm.html
@@ -2,31 +2,31 @@
 <div>&nbsp;<br></div>
 <div class="topimg">当前位置：帐号管理 -> 修改资料</div>
 <div>&nbsp;<br></div>
-<table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+<table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="70%">
 	<tr>
-  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　修改资料</span></font></td>
+  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">修改资料</font></td>
 	</tr>
   <tr>
     <td>
-<table width="100%" height="150" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+<table width="100%" height="150" border="0" cellpadding="0" cellspacing="1" id="td5">
 	  <tr>
-        <td height="25" bgcolor="#f5f5f5" class="color01 right">　用户名：</td>
-        <td bgcolor="#fafaf5">{{$user.username}}</td>
+        <td height="25" id="td3" class="color01 right">用户名：</td>
+        <td id="td4">{{$user.username}}</td>
 	  </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　姓名：</td>
-        <td bgcolor="#fafaf5"> <input name='name' id="name" value='{{$user.name}}' /></td>
+        <td id="td3" class="color01 right">姓名：</td>
+        <td id="td4"> <input name='name' id="name" value='{{$user.name}}' /></td>
         </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　身份证：</td>
-        <td bgcolor="#fafaf5"><input name='id' id="id" value='{{$user.id}}' /></td>
+        <td id="td3" class="color01 right">身份证：</td>
+        <td id="td4"><input name='id' id="id" value='{{$user.id}}' /></td>
 	  </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5"  class="color01 right">　电子邮件</td>
-        <td bgcolor="#fafaf5"><input name='email' id="email" value='{{$user.email}}' /></td>
+        <td id="td3"  class="color01 right">电子邮件</td>
+        <td id="td4"><input name='email' id="email" value='{{$user.email}}' /></td>
         </tr>
 	    <tr>
-	    <td height="20" bgcolor="#f5f5f5" colspan="2">
+	    <td height="20" id="td3" colspan="2">
 		<table width="100%" border="0" cellpadding="0" cellspacing="0">
 		  <tr><td width="250" height="40"></td>
 		  <td><input type='submit' value='修改' /></td></tr></table></td>
