--- a/user/view/default/user/index.html
+++ b/user/view/default/user/index.html
@@ -1,32 +1,32 @@
-<div>&nbsp;<br></div>
+<div><br></div>
 <div class="topimg">当前位置：帐号管理 -> 帐户信息</div>
-<div>&nbsp;<br></div>
-<table align="center" bgcolor="#7FBBF4" border="0" cellpadding="0" cellspacing="1" width="70%">
+<div><br></div>
+<table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="70%">
 	<tr>
-  <td height="30" bgcolor="#51A3EC" colspan="2"><font color="#FFFFFF">　帐户信息</font></td>
+  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">帐户信息</font></td>
 	</tr>
   <tr>
     <td>
-<table width="100%" height="150" border="0" cellpadding="0" cellspacing="1" bgcolor="#C7EAF6">
+<table width="100%" height="150" border="0" cellpadding="0" cellspacing="1" id="td5">
       <tr>
-        <td bgcolor="#f5f5f5" width="189" class="color01 right">　用户名：</td>
-        <td width="423" bgcolor="#fafaf5">{{$user.username}}</td>
+        <td id="td3" width="189" class="color01 right">用户名：</td>
+        <td width="423" id="td4">{{$user.username}}</td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　姓名：</td>
-        <td bgcolor="#fafaf5">{{$user.name}}</td>
+        <td id="td3" class="color01 right">姓名：</td>
+        <td id="td4">{{$user.name}}</td>
       </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　身份证：</td>
-        <td bgcolor="#fafaf5">{{$user.id}}</td>
+        <td id="td3" class="color01 right">身份证：</td>
+        <td id="td4">{{$user.id}}</td>
       </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　电子邮件</td>
-        <td bgcolor="#fafaf5">{{$user.email}}</td>
+        <td id="td3" class="color01 right">电子邮件</td>
+        <td id="td4">{{$user.email}}</td>
 	  </tr>
 	  <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　账户余额(元)</td>
-        <td bgcolor="#fafaf5"> {{$user.money/100}}</td>
+        <td id="td3" class="color01 right">账户余额(元)</td>
+        <td id="td4"> {{$user.money/100}}</td>
         </tr>
     </table></td>
   </tr>
