--- a/admin/view/default/user/useredit.html
+++ b/admin/view/default/user/useredit.html
@@ -4,55 +4,31 @@
 <div class="topimg">当前位置：用户管理-> 用户列表-> 修改用户资料</div>
   <div id="main" class="wid">
   <form  action="?c=user&a=edit&username={{$user.username}}" method='post'>
-    <table align="center" border="0" cellpadding="0" cellspacing="10" width="80%">
-<tr>
-  <td>
-     <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
-       <tr>
-  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　<span class="topimg">修改用户资料</span></span></font></td>
-	</tr>
-	</table>
-	</td>
-</tr>
+    <table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="80%">
+  <tr><td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">修改用户资料</font></td></tr>
   <tr>
     <td>
-<table bgcolor="#CEE1F3" border="0" cellspacing="1" width="100%">
-  <tr>
-    <td bgcolor="#ffffff" width="9%" height="30">
-<table width="100%" height="210" border="0" cellpadding="0" cellspacing="1" bgcolor="#e6f4f9">
-	    <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
+<table width="100%" height="125" border="0" cellpadding="0" cellspacing="1" id="td5">
+      <tr>
+        <td width="203" height="25" class="color01 right" id="td3">用户名：</td>
+        <td width="412" id="td4">{{$user.username}}</td>
         </tr>
       <tr>
-        <td bgcolor="#f5f5f5" width="203" class="color01 right">　用户名：</td>
-        <td width="412" bgcolor="#fafaf5">{{$user.username}}</td>
-        <td width="219" bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
+        <td id="td3" class="color01 right">姓名：</td>
+        <td id="td4"><input name='name' value="{{$user.name}}"/></td>
+        </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　姓名：</td>
-        <td bgcolor="#fafaf5"><input name='name' value="{{$user.name}}"/></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
+        <td id="td3" class="color01 right">身份证:</td>
+        <td id="td4"><input name='id'  value="{{$user.id}}"/></td>
+        </tr>
       <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　身份证:</td>
-        <td bgcolor="#fafaf5"><input name='id'  value="{{$user.id}}"/></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-      <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　电子邮件:</td>
-        <td bgcolor="#fafaf5"><input name='email' value="{{$user.email}}"/></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
+        <td id="td3" class="color01 right">电子邮件:</td>
+        <td id="td4"><input name='email' value="{{$user.email}}"/></td>
+       </tr>
 	   <tr>
-        <td bgcolor="#f5f5f5" class="color01 right">　</td>
-        <td bgcolor="#fafaf5"><button type="submit">修改</button></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
-	    <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
+        <td id="td3" class="color01 right">　</td>
+        <td id="td4"><button type="submit">修改</button></td>
         </tr>
-    </table></td>
-      </tr>
     </table></td>
   </tr>
 </table>
