修改文件表格表框

--- a/vhost/view/default/changePassword.html
+++ b/vhost/view/default/changePassword.html
@@ -19,49 +19,29 @@ function checkPassword()
 <div class="topimg"></div>
   <div id="main" class="wid">
   <form name='frm' action="?c=session&a=changePassword" method="post">
-    <table align="center" border="0" cellpadding="0" cellspacing="10" width="70%">
-<tr>
-  <td>
-     <table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="#C2DADA">
-       <tr>
-  <td height="30" bgcolor="#51A3EC"><font color="#FFFFFF">　修改密码</span></font></td>
+<table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="80%">
+	<tr>
+  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">修改密码</font></td>
 	</tr>
-	</table>
-	</td>
-</tr>
   <tr>
     <td>
-<table bgcolor="#CEE1F3" border="0" cellspacing="1" width="100%">
-  <tr>
-    <td bgcolor="#ffffff" width="9%" height="30">
-<table width="100%" height="170" border="0" cellpadding="0" cellspacing="1" bgcolor="#e6f4f9">
+<table width="100%" height="100" border="0" cellpadding="0" cellspacing="1" id="td5">
       <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
-        </tr>
-      <tr>
-        <td bgcolor="#f5f5f5" width="189">　旧密码：</td>
-        <td width="423" bgcolor="#fafaf5">
+        <td id="td3" class="color01 right">旧密码：</td>
+        <td id="td4">
           <input type='password' name='oldpasswd' id='oldpasswd' ></td>
-        <td width="236" bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
+         </tr>
       <tr>
-        <td bgcolor="#f5f5f5">　新密码：</td>
-        <td bgcolor="#fafaf5"><input type='password' name='passwd' id='passwd' ></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
+        <td id="td3" class="color01 right">新密码：</td>
+        <td id="td4"><input type='password' name='passwd' id='passwd' ></td>
+       </tr>
       <tr>
-        <td bgcolor="#f5f5f5">　确认新密码：</td>
-        <td bgcolor="#fafaf5"><input type='password' name='passwd2' id='passwd2'></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
-      </tr>
+        <td id="td3" class="color01 right">确认新密码：</td>
+        <td id="td4"><input type='password' name='passwd2' id='passwd2'></td>
+       </tr>
       <tr>
-        <td bgcolor="#f5f5f5">　</td>
-        <td bgcolor="#fafaf5"><button type="button" onClick="checkPassword()">确定</button></td>
-        <td bgcolor="#fafaf5">&nbsp;</td>
+         <td colspan="2" align="center" class="color01 right" id="td3"><button type="button" onClick="checkPassword()">确定</button></td>
       </tr>
-	    <tr>
-        <td height="20" colspan="3" bgcolor="#f5f5f5">&nbsp;</td>
-        </tr>
     </table></td>
       </tr>
     </table></td>
