--- a/vhost/view/default/kfinfo.html
+++ b/vhost/view/default/kfinfo.html
@@ -1,51 +1,48 @@
 <div class="topimg STYLE1">当前位置：帐户信息</div>
 <div id="main" class="wid">
-<table width="70%" border=0 align="center" cellPadding=3 cellSpacing=0 >
-<tr>
-  <td width="15" height="40"></td>
-</tr>
+<table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="80%">
+	<tr>
+  <td height="30" id="td2" colspan="2" class="color01 right"><font color="#FFFFFF">帐号信息</font></td>
+	</tr>
   <tr>
-    <td height="25" background="{{$STATIC}}/images/th_bg.gif"><FONT color=#ffffff><STRONG>&nbsp;帐号信息</STRONG></FONT></td>
-  </tr>
-<tr>
-  <td><table width="100%" height="150" cellpadding="0" cellspacing="1" class=style1 id=table>
+    <td><table width="100%" height="225" border="0" cellpadding="0" cellspacing="1" id="td5">
   <tr>
-    <td width="99">&nbsp;用户名</td>
-    <td width="214">&nbsp;{{$user.name}}</td>
+   <td id="td3" class="color01 right">用户名</td>
+    <td id="td4">{{$user.name}}</td>
   </tr>
   <tr>
-    <td>&nbsp;服务器</td>
-    <td>&nbsp;{{$user.node}}</td>
+    <td id="td3" class="color01 right">服务器</td>
+    <td id="td4">{{$user.node}}</td>
   </tr>
   <tr>
-    <td>&nbsp;产品名称</td>
-    <td>&nbsp;{{$user.product_id}}</td>
+    <td id="td3" class="color01 right">产品名称</td>
+    <td id="td4">{{$user.product_id}}</td>
   </tr>
   <tr>
-    <td>&nbsp;创建时间</td>
-    <td>&nbsp;{{$user.create_time}}</td>
+    <td id="td3" class="color01 right">创建时间</td>
+    <td id="td4">{{$user.create_time}}</td>
   </tr>
   <tr>
-    <td>&nbsp;到期时间</td>
-    <td>&nbsp;{{$user.expire_time}}</td>
+    <td id="td3" class="color01 right">到期时间</td>
+    <td id="td4">{{$user.expire_time}}</td>
   </tr>
    <tr>
-    <td>&nbsp;空间配额</td>
-    <td>&nbsp;总大小:{{$quota.web_limit}}M/已使用:{{$quota.web_used}}M</td>
+    <td id="td3" class="color01 right">空间配额</td>
+    <td id="td4">总大小:{{$quota.web_limit}}M/已使用:{{$quota.web_used}}M</td>
   </tr>
   {{if $quota.db_limit}}
     <tr>
-    <td>&nbsp;数据库配额</td>
-    <td>&nbsp;总大小:{{$quota.db_limit}}M/已使用:{{$quota.db_used}}M</td>
+    <td id="td3" class="color01 right">数据库配额</td>
+    <td id="td4">总大小:{{$quota.db_limit}}M/已使用:{{$quota.db_used}}M</td>
   </tr>
    <tr>
-    <td>&nbsp;数据库信息</td>
-    <td>&nbsp;用户名: a{{$user.uid}} , 数据库名: a{{$user.uid}}</td>
+    <td id="td3" class="color01 right">数据库信息</td>
+    <td id="td4">用户名: a{{$user.uid}} , 数据库名: a{{$user.uid}}</td>
     </tr>
   {{/if}}
   <tr>
-    <td>&nbsp;状态</td>
-    <td>&nbsp;{{$user.status}}</td>
+    <td id="td3" class="color01 right">状态</td>
+    <td id="td4">{{$user.status}}</td>
   </tr>
 </table></td>
 </tr>
