--- a/vhost/view/default/style/style.css
+++ b/vhost/view/default/style/style.css
@@ -60,7 +60,6 @@ background:#4298e1;
 }
 h1 {
 font-size:12px;
-color:#036;
 text-align:center;
 margin:2px 0 1px 0;
 background:#c0dcff;
@@ -110,6 +109,10 @@ padding-right:10px;
 .right {
 text-align:left;
 padding-left:10px;
+}
+.right2 {
+text-align:left;
+padding-left:30px;
 }
 .input {
 font-size:12px;
@@ -312,7 +315,23 @@ padding-left:6px;
 float:left;
 padding:5px;
 }
-
+#td1 {
+background:#7FBBF4;
+}
+#td2 {
+background:#51A3EC;
+}
+#td3 {
+background:#f5f5f5;
+}
+#td4 {
+background:#fafaf5;
+}
+#td5 {
+background:#C7EAF6;
+}
 .color01 a {color: #fff;}
 .color01 a:visited {color: #fff;}
-.color01 a:hover {color: red;text-decoration: underline;}
+.color01 a:hover {color: red;text-decoration: underline;
+}
+
