--- a/vhost/view/default/kfinfo.html
+++ b/vhost/view/default/kfinfo.html
@@ -15,7 +15,7 @@
   </tr>
   <tr>
     <td>&nbsp;服务器</td>
-    <td>&nbsp;{{$user.node}}</td>
+    <td>&nbsp;名称: {{$user.node}} , 地址: {{$node_host}}</td>
   </tr>
   <tr>
     <td>&nbsp;产品名称</td>
