修改文件表格

--- a/user/view/default/session/changePassword.html
+++ b/user/view/default/session/changePassword.html
@@ -16,7 +16,7 @@ function checkPassword()
 <div id="container">
   <div id="main" class="wid">
   <form name='frm' action="?c=session&a=changePassword" method="post">
-    <table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="80%">
+    <table align="center" id="td1" border="0" cellpadding="0" cellspacing="1" width="65%">
 	<tr>
   <td height="30" id="td2" colspan="2"><font color="#FFFFFF">　修改资料</span></font></td>
 	</tr>
@@ -24,23 +24,19 @@ function checkPassword()
     <td>
 <table width="100%" height="120" border="0" cellpadding="0" cellspacing="1" id="td5">
 	  <tr>
-        <td id="td3" class="color01 right">　旧密码：</td>
+        <td class="color01 right" id="td3">旧密码：</td>
         <td id="td4"><input type='password' name='oldpasswd' id='oldpasswd' ></td>
 	  </tr>
 	  <tr>
-        <td id="td3" class="color01 right">　新密码：</td>
+        <td id="td3" class="color01 right">新密码：</td>
         <td id="td4"> <input type='password' name='passwd' id='passwd' ></td>
         </tr>
 	  <tr>
-        <td id="td3" class="color01 right">　确认新密码：</td>
+        <td id="td3" class="color01 right">确认新密码：</td>
         <td id="td4"><input type='password' name='passwd2' id='passwd2'></td>
 	  </tr>
 	    <tr>
-	    <td height="20" id="td3" colspan="2">
-		<table width="100%" border="0" cellpadding="0" cellspacing="0">
-		  <tr><td width="200" height="40"></td>
-		    <td><button type="button" onClick="checkPassword()">确定</button></td>
-		  </tr></table></td>
+	    <td id="td3" colspan="2" align="center"><button type="button" onClick="checkPassword()">确定</button></td>
         </tr>
 
     </table></td>
