--- a/vhost/view/default/domain/show.html
+++ b/vhost/view/default/domain/show.html
@@ -9,15 +9,15 @@
   </table>
     <table width="436" cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
-        <td width="75" bgcolor='#efefef' class='color01 right'>操作</td>
-        <td width="123" bgcolor='#efefef' class='color01 right'>域名</td>
-        <td width="232" bgcolor='#efefef' class='color01 right'>目录</td>
+        <td id="td4" class='color01 right'>域名</td>
+        <td id="td4" class='color01 right'>目录</td>
+		<td id="td4" class='color01 right'>操作</td>
 	  </tr>
 	  {{foreach from=$list item=row}}
       <tr>
-        <td class="right">[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=domain&a=del&domain={{$row.name}}';}" title="删除域名"> 删除</a>]</td>
         <td class="right">{{$row.name}}</td>
         <td class="right">{{$row.value}}</td>
+		<td class="right">[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=domain&a=del&domain={{$row.name}}';}" title="删除域名">删除</a>]</td>
 	  </tr>
 	  {{/foreach}}
     </table>
